# MarioAI

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  quickstart.py  requirements.txt  txt.md
.github/workflows/: daily-pull-shark.yml
configs/: default.yaml
mario_ai/: __init__.py  agent.py  callbacks.py  config.py  environment.py  utils.py
tests/: test_config.py  test_environment.py  test_utils.py
