[project]
name = "mario-ai"
version = "1.0.0"
description = "Reinforcement learning agent that learns to play Super Mario Bros from raw pixels using PPO"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "mario", "ppo", "deep-learning", "pytorch"]

[project.scripts]
mario-ai = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"
